# flow-evolution-for-mind

./: .env.example  .gitignore  .trae_task.md  Dockerfile  LICENSE  README.md  README.zh.md  README_EN.md  analyze_cut_sessions.py  analyze_quotes.py  backfill_v85_portrait.py  batch_analyze.py  batch_analyze_0419.py  batch_analyze_with_save.py  batch_cut_all_dates.py  batch_session_cutter.py  check_420_data.py  check_420_detail.py  check_clean.py  check_db.py  check_latest.py  check_noise_filtering.py  check_none.py  check_null_fields.py  check_quotes.py  check_report_quotes.py  check_streaming_segments.py  check_version_null.py  cleanup_historical_noise.py  compare_reports.py  complete_420.py  cut_0423.py  data_quality_check.py  data_quality_check_v2.py  debug_v83.py  deep_audit_session_cutting.py  deploy_deepflow.sh  diagnose_cutting.py  diagnose_embedding.py  diagnose_vector_layer.py  (+76 more)
core/: __init__.py  concept_tracker.py  config.py  db.py  goal_loader.py  llm_client.py  openclaw_path_resolver.py  vector_layer.py
docs/: DATABASE_SCHEMA_V7.5.md  Flow_Ecosystem_PRD_V7.7_Complete.md  PLATFORM_LIMITATIONS.md  README.md  SESSION_ID_SEMANTICS.md  checklist.md  memory.md  plan.md  spec.md  task.md
importer/: README.md  __init__.py  base_parser.py  incremental.py  pipeline.py  watcher.py
plugin/: __init__.py  brave_search.py  breakthrough_writer.py  daily_aggregator.py  deep_report_final.py  goal_extractor.py  llm_client.py  memory_manager.py  report_assembler.py  report_generator.py  report_polisher.py  session_analyzer.py  session_analyzer_v8.4_backup.py  (+7 more)
(+166 files in other folders)
