[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-flow-plugin"
version = "0.1.0"
description = "OpenClaw plugin scaffold for flow ecosystem metrics"
requires-python = ">=3.10"
dependencies = ["sqlalchemy>=2.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
