[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-evolution-for-mind"
version = "7.8.9.7"
description = "Personal cognitive evolution system - silent AI tuning + 4D analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
]

[tool.setuptools]
packages = ["core", "plugin", "skill", "adapters", "scripts"]
